regression_tests/snap/check/teststm2/teststm2.err
================================================================================

                      PROGRAM SNAP  Version 2.7.10-a339290

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 24 2018 08:40:44

================================================================================
                     Run at 26-JUN-2018 10:27:13 by ccrook




================================================================================
                                                            26-JUN-2018 10:27:13

                                 ERROR SUMMARY

================================================================================

Error: Cannot use add_coordinate_file before coordinate_file is loaded
       Line 2: File teststm2.snp

Error: The command file is not correct
