regression_tests/snap/check/teststm2/teststm2.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.10-a339290

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 24 2018 08:40:44

================================================================================
                     Run at 26-JUN-2018 10:27:13 by ccrook




================================================================================
Regression tests - multiple coordinate files                26-JUN-2018 10:27:13

                                     ERRORS

================================================================================

Note: 2 errors reported in teststm2.err
